# Estudos_Engenharia_de_Dados

./: .gitmodules  README.md
Apache-Airflow/: README.md
boatcamp-python/aula11-15_boatcamp_python/: pyproject.toml
boatcamp-python/aula11-15_boatcamp_python/aula13/src/: __main__.py
boatcamp-python/aula11-15_boatcamp_python/aula13/src/data/txt_file/: file2.txt
boatcamp-python/aula11-15_boatcamp_python/aula13/src/json_files/: arquivo.json
boatcamp-python/aula11-15_boatcamp_python/aulas11-12/: class_com_type_hint.py  classes_csv.py  sem_class.py  usar_testes.py
boatcamp-python/aula17-18boatcamp_python/aula17_sqlalchemy/: desafio.py  pyproject.toml  querys.py  teste.py
boatcamp-python/aula17-18boatcamp_python/aula19/: main.py  models.py  pyproject.toml  test.db
